Update OpenAPI definition for Exchange Set Fulfilment AB#244065
